@@ -36,6 +36,7 @@ import static org.junit.Assert.assertTrue;
 
 import hudson.model.User;
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
@@ -85,7 +86,7 @@ public class ApiTokenStatsRestartTest {
                    WebClient wc = j.createWebClient().withBasicCredentials(u.getId());
                    wc.getOptions().setThrowExceptionOnFailingStatusCode(false);
 
-                   WebRequest request = new WebRequest(new URL(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken"), HttpMethod.POST);
+                   WebRequest request = new WebRequest(new URI(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken").toURL(), HttpMethod.POST);
                    request.setRequestParameters(List.of(new NameValuePair("newTokenName", TOKEN_NAME)));
 
                    Page page = wc.getPage(request);
